--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      android:versionName="0.1 beta" package="org.mixare">
+      android:versionCode="2"
+      android:versionName="0.1.1 beta" package="org.mixare">
 
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
 
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -27,4 +27,5 @@
 </application>
 
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+
 </manifest> 
