--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="2"
-      android:versionName="0.1.1 beta" package="org.mixare">
+	android:versionCode="2" android:versionName="0.1.1 beta" package="org.mixare">
 
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
 
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/icon" android:debuggable="false">
-        <activity android:screenOrientation="landscape"
-                  android:label="@string/app_name" android:name=".MixView">
-                                  <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>  
-                  <action android:name="android.intent.action.VIEW" />
-				  <category android:name="android.intent.category.DEFAULT" />
-				  <category android:name="android.intent.category.BROWSABLE" />
-				  <data android:scheme="http" android:mimeType="application/mixare-json"/>
-				  <data android:scheme="content" android:mimeType="application/mixare-json"/>
-            </intent-filter>
-        </activity>
-</application>
+	<application android:label="@string/app_name" android:icon="@drawable/icon"
+		android:debuggable="false">
+		<activity android:screenOrientation="landscape"
+			android:label="@string/app_name" android:name=".MixView">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="http" android:mimeType="application/mixare-json" />
+				<data android:scheme="content" android:mimeType="application/mixare-json" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="org.mixare.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
 
-<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+		</activity>
+	</application>
+
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 
 </manifest> 
