--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 
     <application android:label="@string/app_name" android:icon="@drawable/icon" android:debuggable="false">
+    	<uses-library android:name="com.google.android.maps" />
         <activity android:label="@string/app_name" android:name=".MixView" android:screenOrientation="landscape">
                                   <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +26,10 @@
 <activity android:name="MixListView" android:screenOrientation="user"></activity>
 
 
+
+
+
+<activity android:screenOrientation="user" android:name="MixMap"></activity>
 </application>
 
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
