--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/icon" android:debuggable="false">
+    <application android:label="@string/app_name" android:icon="@drawable/icon" android:debuggable="true">
     	<uses-library android:name="com.google.android.maps" />
         <activity android:label="@string/app_name" android:name=".MixView" android:screenOrientation="landscape">
                                   <intent-filter>
