--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,11 +10,16 @@
 
     <application android:label="@string/app_name" android:icon="@drawable/icon" android:debuggable="true">
     	<uses-library android:name="com.google.android.maps" />
-        <activity android:label="@string/app_name" android:name=".MixView" android:screenOrientation="landscape">
-                                  <intent-filter>
+        
+        <activity android:label="@string/app_name" android:name=".MixView" 
+        android:screenOrientation="landscape"  
+        android:launchMode="singleTop" >
+        
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> 
+            
             <intent-filter>  
                   <action android:name="android.intent.action.VIEW" />
 				  <category android:name="android.intent.category.DEFAULT" />
@@ -22,14 +27,35 @@
 				  <data android:scheme="http" android:mimeType="application/mixare-json"/>
 				  <data android:scheme="content" android:mimeType="application/mixare-json"/>
             </intent-filter>
+            
+            <intent-filter>
+        	    <action android:name="android.intent.action.SEARCH"/>
+        	</intent-filter>
+        	<meta-data android:name="android.app.searchable"
+                   	android:resource="@xml/searchable"/>
+            <meta-data android:name="android.app.default_searchable"
+               		android:value=".MixView" />
         </activity>
-<activity android:name="MixListView" android:screenOrientation="user"></activity>
+        
+		<activity android:name="MixListView" 
+			android:screenOrientation="user" 
+			android:launchMode="singleTop">
+			<intent-filter>
+	            <action android:name="android.intent.action.SEARCH" />
+	        </intent-filter>
+	        <meta-data android:name="android.app.searchable"
+                   	android:resource="@xml/searchable"/>
+		</activity>
 
-
-
-
-
-<activity android:screenOrientation="user" android:name="MixMap"></activity>
+		<activity android:name="MixMap" 
+			android:screenOrientation="user" 
+			android:launchMode="singleTop">
+			<intent-filter>
+	            <action android:name="android.intent.action.SEARCH" />
+	        </intent-filter>
+	        <meta-data android:name="android.app.searchable"
+                   	android:resource="@xml/searchable"/>
+		</activity>
 </application>
 
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
