--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:debuggable="true">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
     	<uses-library android:name="com.google.android.maps" />
         
         <activity android:label="@string/app_name" android:name=".MixView" 
