--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,4 +60,5 @@
 
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 
+<supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"></supports-screens>
 </manifest> 
