--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,6 +57,7 @@
 	        <meta-data android:name="android.app.searchable"
                    	android:resource="@xml/searchable"/>
 		</activity>
+		 <activity android:name="OSMDataSource" />
 </application>
 
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
