--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="16" android:versionName="0.7" package="org.mixare" android:installLocation="auto">
+      android:versionCode="17" android:versionName="0.7" package="org.mixare" android:installLocation="auto">
 
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="9"/>
 
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
-
+	<uses-feature android:required="false" android:name="android.hardware.camera.autofocus"></uses-feature>
+	<uses-feature android:required="false" android:name="android.hardware.camera.flash"></uses-feature>
+	<uses-feature android:required="false" android:name="android.hardware.camera.front"></uses-feature>
+	
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
     	<uses-library android:name="com.google.android.maps" />
         
@@ -64,5 +67,5 @@
 
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 
-<supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"></supports-screens>
+<supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true"></supports-screens>
 </manifest> 
