--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,71 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="20" android:versionName="0.7.3" package="org.mixare" android:installLocation="auto">
+    android:installLocation="auto"
+    package="org.mixare"
+    android:versionCode="20"
+    android:versionName="0.7.3" >
 
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="9"/>
+    <uses-sdk
+        android:minSdkVersion="3"
+        android:targetSdkVersion="9" />
 
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-feature android:required="false" android:name="android.hardware.camera.autofocus"></uses-feature>
-	<uses-feature android:required="false" android:name="android.hardware.camera.flash"></uses-feature>
-	<uses-feature android:required="false" android:name="android.hardware.camera.front"></uses-feature>
-	
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-    	<uses-library android:name="com.google.android.maps" />
-        
-        <activity android:label="@string/app_name" android:name=".MixView" 
-        android:screenOrientation="landscape"  
-        android:launchMode="singleTop" >
-        
-            <intent-filter>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" >
+    </uses-feature>
+    <uses-feature
+        android:name="android.hardware.camera.flash"
+        android:required="false" >
+    </uses-feature>
+    <uses-feature
+        android:name="android.hardware.camera.front"
+        android:required="false" >
+    </uses-feature>
+
+    <application
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
+        <uses-library android:name="com.google.android.maps" />
+
+        <activity
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:name=".MixView"
+            android:screenOrientation="landscape" >
+            
+            <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> 
-            
-            <intent-filter>  
-                  <action android:name="android.intent.action.VIEW" />
-				  <category android:name="android.intent.category.DEFAULT" />
-				  <category android:name="android.intent.category.BROWSABLE" />
-				  <data android:scheme="http" android:mimeType="application/mixare-json"/>
-				  <data android:scheme="content" android:mimeType="application/mixare-json"/>
-				  <data android:scheme="file" android:mimeType="application/mixare-json"/>
+            </intent-filter>
+
+                <intent-filter >
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:mimeType="application/mixare-json" />
             </intent-filter>
             
-            <intent-filter>
-        	    <action android:name="android.intent.action.SEARCH"/>
-        	</intent-filter>
-        	<meta-data android:name="android.app.searchable"
-                   	android:resource="@xml/searchable"/>
-            <meta-data android:name="android.app.default_searchable"
-               		android:value=".MixView" />
+            <intent-filter >
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:mimeType="application/mixare-json"
+                    android:scheme="http" />
+                <data
+                    android:mimeType="application/mixare-json"
+                    android:scheme="content" />
+                <data
+                    android:mimeType="application/mixare-json"
+                    android:scheme="file" />
+            </intent-filter>
+            
+            <intent-filter >
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".MixView" />
         </activity>
         
-		<activity android:name="MixListView" 
-			android:screenOrientation="user" 
-			android:launchMode="singleTop">
-			<intent-filter>
-	            <action android:name="android.intent.action.SEARCH" />
-	        </intent-filter>
-	        <meta-data android:name="android.app.searchable"
-                   	android:resource="@xml/searchable"/>
-		</activity>
+        <activity
+            android:launchMode="singleTop"
+            android:name="MixListView"
+            android:screenOrientation="user" >
+            <intent-filter >
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
 
-		<activity android:name="MixMap" 
-			android:screenOrientation="user" 
-			android:launchMode="singleTop">
-			<intent-filter>
-	            <action android:name="android.intent.action.SEARCH" />
-	        </intent-filter>
-	        <meta-data android:name="android.app.searchable"
-                   	android:resource="@xml/searchable"/>
-		</activity>
-		 <activity android:name=".data.DataSource" />
-		 <activity android:name=".data.DataSourceList" />
-		 
-</application>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity
+            android:launchMode="singleTop"
+            android:name="MixMap"
+            android:screenOrientation="user" >
+            <intent-filter >
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
 
-<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity android:name=".data.DataSource" />
+        <activity android:name=".data.DataSourceList" />
+    </application>
 
-<supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true"></supports-screens>
-</manifest> 
+    <uses-permission android:name="android.permission.WAKE_LOCK" >
+    </uses-permission>
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" >
+    </supports-screens>
+
+</manifest>
