--- a/plugins/mixare-imagemarker-plugin/AndroidManifest.xml
+++ b/plugins/mixare-imagemarker-plugin/AndroidManifest.xml
@@ -9,6 +9,14 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <service
+            android:name=".service.ImageMarkerService"
+            android:exported="true" >
+            <intent-filter>
+               <action android:name="org.mixare.plugin.marker"/>
+               <category android:name="mixare.intent.category.MARKER_PLUGIN"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
