--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
     	<uses-library android:name="com.google.android.maps" />
         
-    	<activity android:name="BarcodeMainActivity" android:icon="@drawable/ic_launcher"
+    	<activity android:name=".MainActivity" android:icon="@drawable/ic_launcher"
 				  android:label="@string/app_name" android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
