--- a/plugins/mixare-mock-location-plugin/AndroidManifest.xml
+++ b/plugins/mixare-mock-location-plugin/AndroidManifest.xml
@@ -4,11 +4,26 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="15"/>
-    
+    <uses-sdk
+        android:minSdkVersion="3"
+        android:targetSdkVersion="15" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
+	
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <service android:name="MockLocationService" >
+        </service>
+
+        <activity android:name="MockLocationActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
