--- a/default.properties
+++ b/default.properties
@@ -10,4 +10,5 @@
 # Indicates whether an apk should be generated for each density.
 split.density=false
 # Project target.
-target=Google Inc.:Google APIs:9
+target=Google Inc.:Google APIs:10
+android.library.reference.1=plugins/mixare-library
