--- a/project.properties
+++ b/project.properties
@@ -7,7 +7,8 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 
+# Indicates whether an apk should be generated for each density.
+split.density=false
 # Project target.
 target=Google Inc.:Google APIs:10
-android.library.reference.1=../mixare-library
-android.library=false
+android.library.reference.1=plugins/mixare-library
