Added a promt, if there are plugins installed. This gives the user the choice to use the plugins, or not.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,8 @@
                		android:value=".MixView" />
         </activity>
         
+		<activity android:name="PluginLoaderActivity"></activity>
+		
 		<activity android:name="MixListView" 
 			android:screenOrientation="user" 
 			android:launchMode="singleTop">
@@ -69,6 +71,7 @@
 		</activity>
 		 <activity android:name=".data.DataSource" />
 		 <activity android:name=".data.DataSourceList" />
+		 
 		 
 </application>
 
