--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="24" android:versionName="0.9-preview" package="org.mixare" android:installLocation="auto">
+      android:versionCode="25" android:versionName="0.9" package="org.mixare" android:installLocation="auto">
 
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="10"/>
 
